--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "helmet": "^7.1.0",
     "libsql": "^0.3.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pino": "^8.19.0",
+    "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
