Added app config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
     "declaration": true,
     "declarationMap": true,
     "baseUrl": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "@/*": ["src/*"]
+    },
   },
   "include": ["."],
   "exclude": ["**/node_modules", "**/.*/", "dist"]
