--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "vitest",
     "start": "NODE_ENV=production tsx src/index.ts",
     "dev": "tsx watch src/index.ts",
+    "start:static": "npx serve -p 8000 --no-port-switching ./static",
     "bun:start": "NODE_ENV=production bun run src/index.ts",
     "bun:dev": "bun watch src/index.ts",
     "docker:build": "docker build -t node-streaming-image-proxy .",
