--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "bun:dev": "bun watch src/index.ts",
     "docker:build": "docker build -t node-streaming-image-proxy .",
     "docker:run": "docker run --name img-proxy --rm -p 3000:3000 -d node-streaming-image-proxy",
-    "docker:stop": "docker stop img-proxy"    
+    "docker:stop": "docker stop img-proxy",
+    "lint": "biome lint",
+    "fix": "biome lint --apply",
+    "format": "biome format --write ./"
   },
   "keywords": [],
   "author": "",
@@ -32,11 +35,13 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.5.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.24",
     "@types/supertest": "^6.0.2",
+    "@vitest/coverage-v8": "^1.3.1",
     "supertest": "^6.3.4",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
